# docs/api_spec.yaml
@@ -771,6 +771,26 @@ paths:
             'application/json':
               schema:
                 type: object
+  /api/orders/{id}/start-service:
+    post:
+      tags:
+      - order-controller
+      operationId: startService
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+          minimum: 1
+      responses:
+        '200':
+          description: OK
+          content:
+            'application/json':
+              schema:
+                type: object
   /api/orders/{id}/finish:
     post:
       tags:
